<package format="2">
  <name>pioneer_config</name>
  <version>0.1.0</version>
  <description>pioneer_config</description>
  <maintainer email="mathapua@gmail.com">Timothy Pua</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>

  <exec_depend>robot_localization</exec_depend>


</package>
